# diskcache-stubs

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yaml
src/diskcache/: __init__.pyi  _typeshed.pyi  core.pyi  djangocache.pyi  fanout.pyi  persistent.pyi  recipes.pyi
src/diskcache-stubs/: __init__.pyi  _typeshed.pyi  core.pyi  djangocache.pyi  fanout.pyi  persistent.pyi  recipes.pyi
typings/: diskcache
