[project]
name = "diskcache-stubs"
version = "0.0.0"
description = "diskcache stubs"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = ["typing-extensions>=4.4.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
]

[project.urls]
Repository = "https://github.com/phi-friday/diskcache-stubs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "diskcache>=5.6.3",
    "ruff==0.5.7",
    "pre-commit>=3.5.0",
    "mypy==1.11.1",
]

[tool.rye.scripts]
lint = { chain = ["lint:check", "lint:format"] }
"lint:check" = "ruff check src --fix"
"lint:format" = "ruff format src"
check = "pre-commit run --all-files --show-diff-on-failure"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/diskcache-stubs"]

[tool.hatch.build.targets.sdist]
include = ["src/diskcache-stubs"]

[tool.mypy]
python_version = "3.8"
strict = true
disable_error_code = "import-untyped,overload-overlap"
disallow_subclassing_any = false
mypy_path = "typings"