[project]
name = "diskcache-stubs"
version = "0.0.0"
description = "diskcache stubs"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = ["typing-extensions>=4.4.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
]

[project.urls]
Repository = "https://github.com/phi-friday/diskcache-stubs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "diskcache>=5.6.3",
    "ruff==0.6.4",
    "pre-commit>=3.5.0",
    "mypy==1.11.2",
    "poethepoet>=0.27.0",
]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"
check = "pre-commit run --all-files --show-diff-on-failure"

[tool.hatch.build.targets.wheel]
packages = ["src/diskcache-stubs"]

[tool.hatch.build.targets.sdist]
include = ["src/diskcache-stubs"]

[tool.mypy]
python_version = "3.8"
strict = true
disable_error_code = "import-untyped,overload-overlap"
disallow_subclassing_any = false
mypy_path = "typings"
