[project]
name = "diskcache-stubs"
version = "0.0.0"
description = "diskcache stubs"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
dependencies = ["typing-extensions>=4.4.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
]

[project.urls]
Repository = "https://github.com/phi-friday/diskcache-stubs"

[project.optional-dependencies]
mypy = [
    "mypy>=1.12.0",
]
mypy-strict = [
    "mypy==1.12.0",
    "diskcache-stubs[mypy]",
]

[tool.uv]
managed = true
dev-dependencies = [
    "diskcache>=5.6.3",
    "ruff==0.6.8",
    "pre-commit>=3.5.0",
    "poethepoet>=0.27.0",
    "diskcache-stubs[mypy-strict]",
    "msgpack<1.1" # macos build error
]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"
check = "pre-commit run --all-files --show-diff-on-failure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diskcache-stubs"]

[tool.hatch.build.targets.sdist]
include = ["src/diskcache-stubs"]

[tool.mypy]
python_version = "3.8"
strict = true
disable_error_code = "import-untyped,overload-overlap"
disallow_subclassing_any = false
local_partial_types = true
mypy_path = "typings"
